--- a/Ark Server/info.html
+++ b/Ark Server/info.html
@@ -11,14 +11,14 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="/img/web img.jpeg" alt="web icon">
+                <img src="img/web img.jpeg" alt="web icon">
             </div>
             <ul>
-                <li> <a href="/main.html"> Main </a> </li>
-                <li> <a href="/info.html"> Info </a> </li>
-                <li> <a href="/highligts.html"> Highlights </a> </li>
-                <li> <a href="/player.html"> Player </a> </li>
-                <li> <a href="/support.html"> Support </a> </li>
+                <li> <a href="index.html"> Main </a> </li>
+                <li> <a href="info.html"> Info </a> </li>
+                <li> <a href="highligts.html"> Highlights </a> </li>
+                <li> <a href="player.html"> Player </a> </li>
+                <li> <a href="support.html"> Support </a> </li>
             </ul>
         </nav>
     </header>
