--- a/Ark Server/index.html
+++ b/Ark Server/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="img/web img.jpeg" alt="web icon">
+                <img src="img/web img.jpg" alt="web icon">
             </div>
             <ul>
                 <li> <a href="index.html"> Main </a> </li>
@@ -23,5 +23,16 @@
         </nav>
     </header>
     
+    <footer>
+        <nav class="navbar-bottom">
+            <ul>
+                <li> <a href=""> Impressum </a> </li>
+                <li> <a href=""> Datenschutz </a> </li>
+                <li> <a href=""> Nutzungsbedingungen </a> </li>
+                <li> <a href=""> Kontakt </a> </li>
+                <li> <p>&copy; 2024 WolfyGHG.</p> </li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
