--- a/Ark Server/player.html
+++ b/Ark Server/player.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="img/web img.jpeg" alt="web icon">
+                <img src="img/web img.jpg" alt="web icon">
             </div>
             <ul>
                 <li> <a href="index.html"> Main </a> </li>
@@ -24,23 +24,59 @@
         </nav>
     </header>
     <section> 
-        <fieldset class="spieler">
-            <div class="simg1"> 
-                <img src="img/spieler-1.png" alt="Spieler1" >
+        <fieldset class="player">
+            <div class="img-left"> 
+                <img src="img/spieler-1.png" alt="Spieler 1" >
+            </div>
+            <div class="img-text1">
+                <b> Server Admin </b> <br>
+                <b> Spieler Name: WolfyGHG</b> <br>
+                <b>  </b> <br>
+                <b>  </b> <br>
+                <b>  </b> <br>
+                <b>  </b> <br>
+                <b>  </b> <br>
+                <b> Spiel Zeit: 255.7h </b> <br>
+                <b>  </b> <br>
+                <a href="https://steamcommunity.com/profiles/76561199228476396/"> Steam Account Link </a> <br>
             </div>
 
         </fieldset>
 
-        <fieldset class="spieler">
-            <div class="simg2">
+        <fieldset class="player">
+            <div class="img-right">
                 <img src="img/spieler-2.png" alt="Spieler 2">
             </div>
+            <div class="img-text2">
+                <b> Spieler </b> <br>
+                <b> Spieler Name: CryZツ </b> <br>
+                <b>  </b> <br>
+                <b>  </b> <br>
+                <b>  </b> <br>
+                <b>  </b> <br>
+                <b>  </b> <br>
+                <b> Spiel Zeit: 105.6h </b> <br>
+                <b>  </b> <br>
+                <a href="https://steamcommunity.com/profiles/76561199268153926/"> Steam Account Link </a> <br>
+            </div>
 
         </fieldset>
 
-        <fieldset class="spieler">
-            <div class="simg1"> 
-                <img src="img/spieler-3.png" alt="Spieler3">
+        <fieldset class="player">
+            <div class="img-left"> 
+                <img src="img/spieler-3.png" alt="Spieler 3">
+            </div>
+            <div class="img-text1">
+                <b> Spieler </b> <br>
+                <b> Spieler Name: HugeCrackman </b> <br>
+                <b>  </b> <br>
+                <b>  </b> <br>
+                <b>  </b> <br>
+                <b>  </b> <br>
+                <b>  </b> <br>
+                <b> Spiel Zeit: 79.3h </b> <br>
+                <b>  </b> <br>
+                <a href="https://steamcommunity.com/profiles/76561199229824686/"> Steam Account Link </a> <br>
             </div>
 
         </fieldset>
