--- a/Ark Server/info.html
+++ b/Ark Server/info.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="img/web img.jpeg" alt="web icon">
+                <img src="img/web img.jpg" alt="web icon">
             </div>
             <ul>
                 <li> <a href="index.html"> Main </a> </li>
