--- a/Ark Server/highligts.html
+++ b/Ark Server/highligts.html
@@ -6,6 +6,7 @@
     <title>Ark server WolfyGHG</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/highligts-style.css">
 </head>
 <body>
     <header>
@@ -22,6 +23,34 @@
             </ul>
         </nav>
     </header>
-    
+    <section>
+        <fieldset class="highligts-background">
+            <div>
+                <h1> Die besten Momente auf dem Server </h1>
+            </div>
+            <div>
+                <h2> Die Schönsten orten auf dem Server </h2>
+            </div>
+            <div class="Location">
+                <img src="img-highligts/Location-1.png" alt="Location-1">
+                <img src="img-highligts/Location-2.png" alt="Location-2">
+                <img src="" alt="Location-3">
+                <img src="" alt="Location-4">
+                <img src="" alt="Location-5">
+                <img src="" alt="Location-6">
+            </div> <br> <br>
+            <div>
+                <h2> Die verschiedenen Gebäude auf dem server </h2>
+            </div>
+            <div class="Base">
+                <img src="img-highligts/Base-1.png" alt="Base-1">
+                <img src="" alt="Base-2">
+                <img src="" alt="Base-3">
+                <img src="" alt="Base-4">
+                <img src="" alt="Base-5">
+                <img src="" alt="Base-6">
+            </div> <br> <br>
+        </fieldset>
+    </section>
 </body>
 </html>
