--- a/Ark Server/highligts.html
+++ b/Ark Server/highligts.html
@@ -27,6 +27,7 @@
         <fieldset class="highligts-background">
             <div>
                 <h1> Die besten Momente auf dem Server </h1>
+                <b> Das ist sind die Schönsten und besten Sachen die auf dem server gebaut oder gäzamt worden. </b>
             </div>
             <div>
                 <h2> Die Schönsten orten auf dem Server </h2>
@@ -34,21 +35,46 @@
             <div class="Location">
                 <img src="img-highligts/Location-1.png" alt="Location-1">
                 <img src="img-highligts/Location-2.png" alt="Location-2">
-                <img src="" alt="Location-3">
-                <img src="" alt="Location-4">
+                <img src="img-highligts/Location-3.png" alt="Location-3">
+                <img src="img-highligts/Location-4.png" alt="Location-4">
                 <img src="" alt="Location-5">
                 <img src="" alt="Location-6">
             </div> <br> <br>
+
             <div>
                 <h2> Die verschiedenen Gebäude auf dem server </h2>
             </div>
             <div class="Base">
                 <img src="img-highligts/Base-1.png" alt="Base-1">
-                <img src="" alt="Base-2">
-                <img src="" alt="Base-3">
-                <img src="" alt="Base-4">
-                <img src="" alt="Base-5">
-                <img src="" alt="Base-6">
+                <img src="img-highligts/Base-2.png" alt="Base-2">
+                <img src="img-highligts/Base-3.png" alt="Base-3">
+                <img src="img-highligts/Base-4.png" alt="Base-4">
+                <img src="img-highligts/Base-5.png" alt="Base-5">
+                <img src="img-highligts/Base-6.png" alt="Base-6">
+            </div> <br> <br>
+
+            <div>
+                <h2> Die Stärksten Dinos die wir gezähmt haben </h2>
+            </div>
+            <div class="Dino-Strong">
+                <img src="img-highligts/Dino-Strong-1.png" alt="Dino-1">
+                <img src="img-highligts/Dino-Strong-2.png" alt="Dino-2">
+                <img src="img-highligts/Dino-Strong-3.png" alt="Dino-3">
+                <img src="img-highligts/Dino-Strong-4.png" alt="Dino-4">
+                <img src="img-highligts/Dino-Strong-5.png" alt="Dino-5">
+                <img src="img-highligts/Dino-Strong-6.png" alt="Dino-6">
+            </div> <br> <br>
+
+            <div>
+                <h2> Die Schönsten Dinos die wir gezähmt haben </h2>
+            </div>
+            <div class="Dino-Strong">
+                <img src="img-highligts/Dino-sweet-1.png" alt="Dino-1">
+                <img src="img-highligts/Dino-sweet-2.png" alt="Dino-2">
+                <img src="img-highligts/Dino-sweet-3.png" alt="Dino-3">
+                <img src="img-highligts/Dino-sweet-4.png" alt="Dino-4">
+                <img src="img-highligts/Dino-sweet-5.png" alt="Dino-5">
+                <img src="img-highligts/Dino-sweet-6.png" alt="Dino-6">
             </div> <br> <br>
         </fieldset>
     </section>
