--- a/Ark Server/index.html
+++ b/Ark Server/index.html
@@ -26,11 +26,11 @@
     <footer>
         <nav class="navbar-bottom">
             <ul>
-                <li> <a href=""> Impressum </a> </li>
-                <li> <a href=""> Datenschutz </a> </li>
-                <li> <a href=""> Nutzungsbedingungen </a> </li>
-                <li> <a href=""> Kontakt </a> </li>
-                <li> <p>&copy; 2024 WolfyGHG.</p> </li>
+                <li> <a href="footer/impressum.html"> Impressum </a> </li>
+                <li> <a href="footer/datenschutz.html"> Datenschutz </a> </li>
+                <li> <a href="footer/nutzungsbedingungen.html"> Nutzungsbedingungen </a> </li>
+                <li> <a href="footer/kontakt.html"> Kontakt </a> </li>
+                <li> <p>&copy; 2024 Yannick.</p> </li>
             </ul>
         </nav>
     </footer>
