--- a/Ark Server/player.html
+++ b/Ark Server/player.html
@@ -23,63 +23,75 @@
             </ul>
         </nav>
     </header>
-    <section> 
-        <fieldset class="player">
-            <div class="img-left"> 
-                <img src="img/spieler-1.png" alt="Spieler 1" >
-            </div>
-            <div class="img-text1">
-                <b> Server Admin </b> <br>
-                <b> Spieler Name: WolfyGHG</b> <br>
-                <b>  </b> <br>
-                <b>  </b> <br>
-                <b>  </b> <br>
-                <b>  </b> <br>
-                <b>  </b> <br>
-                <b> Spiel Zeit: 255.7h </b> <br>
-                <b>  </b> <br>
-                <a href="https://steamcommunity.com/profiles/76561199228476396/"> Steam Account Link </a> <br>
-            </div>
+    <main>
+        <section> 
+            <fieldset class="player">
+                <div class="img-left"> 
+                    <img src="img/spieler-1.png" alt="Spieler 1" >
+                </div>
+                <div class="img-text1">
+                    <b> Server Admin </b> <br>
+                    <b> Spieler Name: WolfyGHG</b> <br>
+                    <b>  </b> <br>
+                    <b>  </b> <br>
+                    <b>  </b> <br>
+                    <b>  </b> <br>
+                    <b>  </b> <br>
+                    <b> Spiel Zeit: 255.7h </b> <br>
+                    <b>  </b> <br>
+                    <a href="https://steamcommunity.com/profiles/76561199228476396/"> Steam Account Link </a> <br>
+                </div>
 
-        </fieldset>
+            </fieldset>
 
-        <fieldset class="player">
-            <div class="img-right">
-                <img src="img/spieler-2.png" alt="Spieler 2">
-            </div>
-            <div class="img-text2">
-                <b> Spieler </b> <br>
-                <b> Spieler Name: CryZツ </b> <br>
-                <b>  </b> <br>
-                <b>  </b> <br>
-                <b>  </b> <br>
-                <b>  </b> <br>
-                <b>  </b> <br>
-                <b> Spiel Zeit: 105.6h </b> <br>
-                <b>  </b> <br>
-                <a href="https://steamcommunity.com/profiles/76561199268153926/"> Steam Account Link </a> <br>
-            </div>
+            <fieldset class="player">
+                <div class="img-right">
+                    <img src="img/spieler-2.png" alt="Spieler 2">
+                </div>
+                <div class="img-text2">
+                    <b> Spieler </b> <br>
+                    <b> Spieler Name: CryZツ </b> <br>
+                    <b>  </b> <br>
+                    <b>  </b> <br>
+                    <b>  </b> <br>
+                    <b>  </b> <br>
+                    <b>  </b> <br>
+                    <b> Spiel Zeit: 105.6h </b> <br>
+                    <b>  </b> <br>
+                    <a href="https://steamcommunity.com/profiles/76561199268153926/"> Steam Account Link </a> <br>
+                </div>
 
-        </fieldset>
+            </fieldset>
 
-        <fieldset class="player">
-            <div class="img-left"> 
-                <img src="img/spieler-3.png" alt="Spieler 3">
-            </div>
-            <div class="img-text1">
-                <b> Spieler </b> <br>
-                <b> Spieler Name: HugeCrackman </b> <br>
-                <b>  </b> <br>
-                <b>  </b> <br>
-                <b>  </b> <br>
-                <b>  </b> <br>
-                <b>  </b> <br>
-                <b> Spiel Zeit: 79.3h </b> <br>
-                <b>  </b> <br>
-                <a href="https://steamcommunity.com/profiles/76561199229824686/"> Steam Account Link </a> <br>
-            </div>
-
-        </fieldset>
-    </section>
+            <fieldset class="player">
+                <div class="img-left"> 
+                    <img src="img/spieler-3.png" alt="Spieler 3">
+                </div>
+                <div class="img-text1">
+                    <b> Spieler </b> <br>
+                    <b> Spieler Name: HugeCrackman </b> <br>
+                    <b>  </b> <br>
+                    <b>  </b> <br>
+                    <b>  </b> <br>
+                    <b>  </b> <br>
+                    <b>  </b> <br>
+                    <b> Spiel Zeit: 79.3h </b> <br>
+                    <b>  </b> <br>
+                    <a href="https://steamcommunity.com/profiles/76561199229824686/"> Steam Account Link </a> <br>
+                </div>
+            </fieldset>
+        </section>
+    </main>
+    <footer>
+        <nav class="navbar-bottom">
+            <ul>
+                <li> <a href="footer/impressum.html"> Impressum </a> </li>
+                <li> <a href="footer/datenschutz.html"> Datenschutz </a> </li>
+                <li> <a href="footer/nutzungsbedingungen.html"> Nutzungsbedingungen </a> </li>
+                <li> <a href="footer/kontakt.html"> Kontakt </a> </li>
+                <li> <p>&copy; 2024 Yannick.</p> </li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
