--- a/Ark Server/info.html
+++ b/Ark Server/info.html
@@ -22,6 +22,19 @@
             </ul>
         </nav>
     </header>
-    
+    <main>
+
+    </main>
+    <footer>
+        <nav class="navbar-bottom">
+            <ul>
+                <li> <a href="footer/impressum.html"> Impressum </a> </li>
+                <li> <a href="footer/datenschutz.html"> Datenschutz </a> </li>
+                <li> <a href="footer/nutzungsbedingungen.html"> Nutzungsbedingungen </a> </li>
+                <li> <a href="footer/kontakt.html"> Kontakt </a> </li>
+                <li> <p>&copy; 2024 Yannick.</p> </li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
