--- a/Ark Server/footer/impressum.html
+++ b/Ark Server/footer/impressum.html
@@ -26,7 +26,19 @@
     <main>
         <section>
             <fieldset class="footer-background">
-                
+                <h2> Impressum </h2>
+                <br> 
+                <b> Yannick <br>
+                    Kiefernweg 1 <br>
+                    4313 Möhlin <br>
+                    Schweiz </b> <br>
+                <br>
+                <b> Telefon: +41 078 408 54 70 <br>
+                    E-Mail: yannick.frei@student.ipso.ch </b> <br>
+                <br>
+                <h3> Haftungsausschluss </h3> <br>
+                <b> Trotz sorgfältiger Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links. Für den <br>
+                    Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich. </b> <br>
             </fieldset>
         </section>
     </main>
