--- a/Ark Server/footer/kontakt.html
+++ b/Ark Server/footer/kontakt.html
@@ -26,7 +26,16 @@
     <main>
         <section>
             <fieldset class="footer-background">
-
+                <h2> Kontakt </h2> <br>
+                <br>
+                <b> Falls Sie Fragen zu unserer Webseite oder unseren Services haben, können Sie uns jederzeit <br>
+                    erreichen: </b> <br>
+                <br>
+                <b> Yannick <br>
+                    E-Mail: yannick.frei@student.ipso.ch <br>
+                    Telefon: +41 078 408 54 70 </b> <br>
+                <br>
+                <b> Wir freuen uns, von Ihnen zu hören! </b> <br>
             </fieldset>
         </section>
     </main>
