--- a/Ark Server/footer/nutzungsbedingungen.html
+++ b/Ark Server/footer/nutzungsbedingungen.html
@@ -26,7 +26,23 @@
     <main>
         <section>
             <fieldset class="footer-background">
-
+                <h2> Nutzungsbedingungen </h2> <br>
+                <br>
+                <b> Die Nutzung dieser Website erfolgt ausschließlich zu den nachstehenden Bedingungen: </b> <br>
+                <br>
+                <h3> Haftung für Inhalte </h3> <br>
+                <b> Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit <br>
+                    und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. </b> <br>
+                <br>
+                <h3> Haftungsausschluss für Links </h3> <br>
+                <b> Unsere Webseite enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss <br>
+                    haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. </b> <br>
+                <br>
+                <h3> Urheberrecht </h3> <br>
+                <b> Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem <br>
+                    schweizer Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung <br>
+                    außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen <br>
+                    Autors bzw. Erstellers. </b> <br>
             </fieldset>
         </section>
     </main>
