--- a/Ark Server/index.html
+++ b/Ark Server/index.html
@@ -6,6 +6,7 @@
     <title>Ark server WolfyGHG</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/index-style.css">
 </head>
 <body>
     <header>
@@ -22,7 +23,13 @@
             </ul>
         </nav>
     </header>
-    
+    <main>
+        <section>
+            <fieldset class="index-background">
+
+            </fieldset>
+        </section>
+    </main>
     <footer>
         <nav class="navbar-bottom">
             <ul>
