--- a/Ark Server/info.html
+++ b/Ark Server/info.html
@@ -6,6 +6,7 @@
     <title>Ark server WolfyGHG</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/info-style.css">
 </head>
 <body>
     <header>
@@ -23,7 +24,11 @@
         </nav>
     </header>
     <main>
+        <section>
+            <fieldset class="info-background">
 
+            </fieldset>
+        </section>
     </main>
     <footer>
         <nav class="navbar-bottom">
