--- a/Ark Server/player.html
+++ b/Ark Server/player.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <section> 
-            <fieldset class="player">
+            <fieldset class="player-background">
                 <div class="img-left"> 
                     <img src="img/spieler-1.png" alt="Spieler 1" >
                 </div>
@@ -44,7 +44,7 @@
 
             </fieldset>
 
-            <fieldset class="player">
+            <fieldset class="player-background">
                 <div class="img-right">
                     <img src="img/spieler-2.png" alt="Spieler 2">
                 </div>
@@ -63,7 +63,7 @@
 
             </fieldset>
 
-            <fieldset class="player">
+            <fieldset class="player-background">
                 <div class="img-left"> 
                     <img src="img/spieler-3.png" alt="Spieler 3">
                 </div>
