--- a/Ark Server/footer/datenschutz.html
+++ b/Ark Server/footer/datenschutz.html
@@ -26,7 +26,28 @@
     <main>
         <section>
             <fieldset class="footer-background">
-
+                <h2> Datenschutzerklärung </h2>
+                <br>
+                <b> Ich, Yannick, nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre <br>
+                    personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften <br>
+                    sowie dieser Datenschutzerklärung. </b> <br>
+                <br>
+                <h3> Datenverarbeitung </h3> <br>
+                <b> Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. <br>
+                    Soweit auf unseren Seiten personenbezogene Daten erhoben werden, erfolgt dies stets auf <br>
+                    freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte <br>
+                    weitergegeben. </b> <br>
+                <br>
+                <h3> Cookies </h3> <br>
+                <b> Diese Website verwendet teilweise Cookies, um die Nutzung der Webseite zu analysieren und das <br>
+                    Angebot zu verbessern. Sie können die Speicherung der Cookies durch eine entsprechende <br>
+                    Einstellung Ihrer Browser-Software verhindern. </b> <br>
+                <br>
+                <h3> Recht auf Auskunft, Löschung, Sperrung </h3>
+                <b> Sie haben jederzeit das Recht auf unentgeltliche Auskunft über Ihre gespeicherten <br>
+                    personenbezogenen Daten sowie ein Recht auf Berichtigung, Sperrung oder Löschung dieser Daten. </b> <br>
+                <br>
+                <b> Für Anfragen wenden Sie sich bitte an: yannick.frei@student.ipso.ch </b> <br>
             </fieldset>
         </section>
     </main>
