--- a/Ark Server/info.html
+++ b/Ark Server/info.html
@@ -26,8 +26,40 @@
     <main>
         <section>
             <fieldset class="info-background">
-
+                <h2> Server-Infos </h2> <br>
+                <h3> Standort und Verfügbarkeit </h3> <br>
+                <b> Der Server wird auf einem Rechner in der Schweiz gehostet, der nicht rund um die Uhr laufen kann. <br>
+                    Deshalb ist der Server NICHT 24/7 verfügbar. Er kann jedoch auf Anfrage gestartet werden. <br>
+                    Wenn er nicht mehr benutzt wird, sollte er wieder heruntergefahren werden. <br>
+                    Es ist also wichtig, Bescheid zu geben, wenn der Server nicht mehr benötigt wird. </b> <br>
+                <br>
+                <h3> Server-Spezifikationen </h3> <br>
+                <b> RAM: 48 GB <br>
+                    CPU: i7 13700k <br>
+                    Über WLAN (kann zu erhöhtem Ping führen) <br>
+                    Standort: Schweiz </b> <br>
+                <br>
+                <h3> Mit dem Server verbinden </h3> <br>
+                <b> Der Server kann in Ark: Survival Ascended unter „Inoffiziell“ gefunden werden. <br>
+                    Dabei ist zu beachten, dass die richtigen Sucheinstellungen aktiviert sind, <br>
+                    welche auf dem Bild unten gezeigt werden. </b> <br>
+                <div class="server-info">
+                    <img src="img/server-info.png" alt="Server-Info">
+                </div>
+                <br>
+                <h3> Weitere Informationen </h3> <br>
+                <b> Der Server ist ein Cluster-Server und im Spiel über die Obelisken miteinander verbunden. <br>
+                    Da der Rechner jedoch nicht allmächtig ist, können maximal 4 Welten gleichzeitig laufen. <br>
+                    Wir haben auch überlegt, den Server auf 128 GB RAM zu erweitern, <br>
+                    aber im Moment werden die Welten nur bei Bedarf gewechselt. </b> <br>
+                <h4> Server-Namen </h4> <br>
+                <b> WolfyGHG-The-Island-Server <br> 
+                    WolfyGHG-Scorched-Earth-Server <br>
+                    WolfyGHG-The-Center-Server <br>
+                    WolfyGHG-Aberrant-Server <br> <br>
+                    Die restlichen Welten werden ähnlich aufgebaut sein und entsprechend benannt. </b> <br>
             </fieldset>
+            
         </section>
     </main>
     <footer>
