--- a/Ark Server/highligts.html
+++ b/Ark Server/highligts.html
@@ -27,7 +27,7 @@
         <section>
             <fieldset class="highlights-background">
                 <div>
-                    <h1> Die besten Momente auf dem Server </h1>
+                    <h1> Die besten Momente auf dem Server </h1> <br>
                     <b> Dies sind die schönsten und besten Errungenschaften, die auf dem Server gebaut oder gezähmt wurden. </b>
                 </div>
                 <div>
