--- a/Ark Server/index.html
+++ b/Ark Server/index.html
@@ -26,7 +26,49 @@
     <main>
         <section>
             <fieldset class="index-background">
-                
+                <div class="banner">
+                    <img src="img/Banner.png" alt="Banner">
+                </div>
+                <fieldset class="gif-text" >
+                    <div>
+                        <h1> Ark: Survival Ascended </h1> <br>
+                        <b> Ark: Survival Ascended ist die neueste Version des <br>
+                            beliebten Survival-Spiels Ark: Survival Evolved und <br>
+                            bringt zahlreiche Verbesserungen und neue Features. <br>
+                            Es handelt sich um ein Remake des ursprünglichen Spiels, <br>
+                            das jetzt mit Unreal Engine 5 entwickelt wurde und beeindruckende <br>
+                            grafische Updates bietet, die detailliertere Umgebungen, bessere <br>
+                            Beleuchtung und realistischere Animationen ermöglichen. </b> <br>
+                    </div>
+                    <div class="gif">  
+                        <img src="img/dino.gif" alt="Dino GIF">
+                    </div>
+                </fieldset> <br>
+                <div>
+                    <b> In Ark: Survival Ascended schlüpfen Spieler weiterhin in die Rolle eines Überlebenden auf einer Insel <br>
+                        voller Dinosaurier und anderer prähistorischer Kreaturen. Das Ziel ist es, zu überleben, Ressourcen zu <br>
+                        sammeln, eine Basis zu bauen, Kreaturen zu zähmen und mit anderen Spielern zu interagieren. Ein <br>
+                        großer Unterschied zur Vorgängerversion ist die verbesserte KI der Kreaturen, die nun Hindernissen <br>
+                        besser ausweichen können. Zudem gibt es ein neues Bausystem, das das Platzieren von Strukturen <br>
+                        erleichtert, und eine Foto-Modus-Funktion für beeindruckende Schnappschüsse in der Wildnis. </b> <br> <br>
+
+                    <b> Zusätzlich zur Kernmechanik wurde auch die Benutzeroberfläche überarbeitet, um ein immersiveres <br>
+                        Spielerlebnis zu bieten. Auch das Taming-System wurde angepasst, so dass jetzt Baby-Dinosaurier <br> 
+                        gefunden und direkt „beansprucht“ werden können. Während Ark: Survival Evolved verschiedene <br>
+                        DLCs und Karten erforderte, wird Ark: Survival Ascended diese Inhalte im Spielverlauf hinzufügen, <br>
+                        ohne dass sie separat gekauft werden müssen. Die neue Version enthält ebenfalls eine Story, die <br>
+                        Spieler durch die verschiedenen Regionen und DLCs führen wird und tiefer in die <br>
+                        Hintergrundgeschichte der Spielwelt eintaucht. </b> <br> <br>
+
+                    <b> Da sich das Spiel derzeit in der Early-Access-Phase befindet, können noch Fehler und Abstürze <br>
+                        auftreten, aber die Entwickler haben geplant, alle Inhalte aus dem Vorgänger sowie neue Kreaturen <br>
+                        und Mechaniken hinzuzufügen. Ark: Survival Ascended kombiniert somit das bekannte <br>
+                        Überlebenserlebnis mit moderner Grafik und neuen Spielmechaniken und bietet Fans und neuen <br>
+                        Spielern eine frische und verbesserte Spielerfahrung</b> <br> <br>
+
+                    <h4> Server infos unter <a href="info.html"> Info </a> </h4> <br>
+                    <h4> Weitere infos im <a href="https://ark.wiki.gg/wiki/ARK:_Survival_Ascended" target="_blank"> Ark Wiki </a> </h4>
+                </div>
             </fieldset>
         </section>
     </main>
