--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ark server WolfyGHG</title>
-    <link rel="stylesheet" href="Ark Server/css/style.css">
-    <link rel="stylesheet" href="Ark Server/css/reset.css">
-    <link rel="stylesheet" href="Ark Server/css/index-style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/index-style.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="Ark Server/img/web img.jpg" alt="web icon">
+                <img src="img/web img.jpg" alt="web icon">
             </div>
             <ul>
-                <li> <a href="Ark Server/index.html"> Main </a> </li>
-                <li> <a href="Ark Server/info.html"> Info </a> </li>
-                <li> <a href="Ark Server/highligts.html"> Highlights </a> </li>
-                <li> <a href="Ark Server/player.html"> Player </a> </li>
-                <li> <a href="Ark Server/support.html"> Support </a> </li>
+                <li> <a href="index.html"> Main </a> </li>
+                <li> <a href="info.html"> Info </a> </li>
+                <li> <a href="highligts.html"> Highlights </a> </li>
+                <li> <a href="player.html"> Player </a> </li>
+                <li> <a href="support.html"> Support </a> </li>
             </ul>
         </nav>
     </header>
@@ -27,7 +27,7 @@
         <section>
             <fieldset class="index-background">
                 <div class="banner">
-                    <img src="Ark Server/img/Banner.png" alt="Banner">
+                    <img src="img/Banner.png" alt="Banner">
                 </div>
                 <fieldset class="gif-text" >
                     <div>
@@ -41,7 +41,7 @@
                             Beleuchtung und realistischere Animationen ermöglichen. </b> <br>
                     </div>
                     <div class="gif">  
-                        <img src="Ark Server/img/dino.gif" alt="Dino GIF">
+                        <img src="img/dino.gif" alt="Dino GIF">
                     </div>
                 </fieldset> <br>
                 <div>
@@ -66,7 +66,7 @@
                         Überlebenserlebnis mit moderner Grafik und neuen Spielmechaniken und bietet Fans und neuen <br>
                         Spielern eine frische und verbesserte Spielerfahrung</b> <br> <br>
 
-                    <h4> Server infos unter <a href="Ark Server/info.html"> Info </a> </h4> <br>
+                    <h4> Server infos unter <a href="info.html"> Info </a> </h4> <br>
                     <h4> Weitere infos im <a href="https://ark.wiki.gg/wiki/ARK:_Survival_Ascended" target="_blank"> Ark Wiki </a> </h4>
                 </div>
             </fieldset>
@@ -75,10 +75,10 @@
     <footer>
         <nav class="navbar-bottom">
             <ul>
-                <li> <a href="Ark Server/footer/impressum.html"> Impressum </a> </li>
-                <li> <a href="Ark Server/footer/datenschutz.html"> Datenschutz </a> </li>
-                <li> <a href="Ark Server/footer/nutzungsbedingungen.html"> Nutzungsbedingungen </a> </li>
-                <li> <a href="Ark Server/footer/kontakt.html"> Kontakt </a> </li>
+                <li> <a href="footer/impressum.html"> Impressum </a> </li>
+                <li> <a href="footer/datenschutz.html"> Datenschutz </a> </li>
+                <li> <a href="footer/nutzungsbedingungen.html"> Nutzungsbedingungen </a> </li>
+                <li> <a href="footer/kontakt.html"> Kontakt </a> </li>
                 <li> <p>&copy; 2024 Yannick.</p> </li>
             </ul>
         </nav>
