--- a/highligts.html
+++ b/highligts.html
@@ -38,8 +38,8 @@
                     <img src="img-highligts/Location-2.png" alt="Location-2">
                     <img src="img-highligts/Location-3.png" alt="Location-3">
                     <img src="img-highligts/Location-4.png" alt="Location-4">
-                    <img src="" alt="Location-5">
-                    <img src="" alt="Location-6">
+                    <img src="img-highligts/Location-5.png" alt="Location-5">
+                    <img src="img-highligts/Location-6.png" alt="Location-6">
                 </div> <br> <br>
     
                 <div>
@@ -89,6 +89,13 @@
                     <img src="img-highligts/Boss-5.png" alt="Boss-5">
                     <img src="img-highligts/Boss-6.png" alt="Boss-6">
                 </div> <br> <br>
+
+                <div> 
+                    <h2> Base Trailer vom Ark server </h2>
+                </div>
+                <div class="video-trailer">
+                    <video> <source src="video/Ark-web-Trailer.mp4" type="video/mp4"></video>
+                </div>
             </fieldset>
         </section>
     </main>
