--- a/highligts.html
+++ b/highligts.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ark server WolfyGHG</title>
+    <link rel="icon" href="img/web img.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/highligts-style.css">
@@ -94,7 +95,13 @@
                     <h2> Base Trailer vom Ark server </h2>
                 </div>
                 <div class="video-trailer">
-                    <video> <source src="video/Ark-web-Trailer.mp4" type="video/mp4"></video>
+                    <iframe 
+                        src="https://www.youtube.com/embed/GySoAv7BORw" 
+                        title="YouTube video player" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen>
+                    </iframe>
                 </div>
             </fieldset>
         </section>
