--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
                         Spielern eine frische und verbesserte Spielerfahrung</b> <br> <br>
 
                     <h4> Server infos unter <a href="info.html"> Info </a> </h4> <br>
-                    <h4> Weitere infos im <a href="https://ark.wiki.gg/wiki/ARK:_Survival_Ascended" target="_blank"> Ark Wiki </a> </h4>
+
+                    <h2> Externe links </h2> <br>
+                    <b> Auf Instant Gaming </b><a href="https://www.instant-gaming.com/de/14543-kaufen-steam-ark-survival-ascended-pc-spiel-steam/?_gl=1*k4a9yr*_up*MQ..&gclid=CjwKCAiAxKy5BhBbEiwAYiW---AU4apQPtFsjg4PZR3kmllG_VPFU-qI-xCuXcMtAhT6GqQS2oMJ5hoCWFIQAvD_BwE" target="_blank"> Kaufen </a> <br>
+                    <b> Auf Steam </b><a href="https://store.steampowered.com/app/2399830/ARK_Survival_Ascended/" target="_blank"> Kaufen </a> <br>
+                    <b> Dododex </b><a href="https://www.dododex.com" target="_blank"> Infos </a> <br>
+                    <b> Weitere infos im  </b><a href="https://ark.wiki.gg/wiki/ARK:_Survival_Ascended" target="_blank"> Ark Wiki </a>
                 </div>
             </fieldset>
         </section>
