--- a/player.html
+++ b/player.html
@@ -53,7 +53,7 @@
                     <b> Spieler </b> <br>
                     <b> Spieler Name: CryZツ </b> <br>
                     <b>  </b> <br>
-                    <b> Ist ein mitspieler auf dem Server </b> <br>
+                    <b> Ist ein Mitspieler auf dem Server </b> <br>
                     <b>  </b> <br>
                     <b>  </b> <br>
                     <b>  </b> <br>
@@ -72,7 +72,7 @@
                     <b> Spieler </b> <br>
                     <b> Spieler Name: HugeCrackman </b> <br>
                     <b>  </b> <br>
-                    <b> Ist ein mitspieler auf dem Server </b> <br>
+                    <b> Ist ein Mitspieler auf dem Server </b> <br>
                     <b>  </b> <br>
                     <b>  </b> <br>
                     <b>  </b> <br>
