--- a/footer/nutzungsbedingungen.html
+++ b/footer/nutzungsbedingungen.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="footer-style.css">
 </head>
 <body>
+    <!-- Loader-Element -->
+    <div class="loader"></div>
+
+    <!-- Einbindung des JavaScript-Skripts zum Steuern des Loaders -->
+    <script src="../js/loader.js"></script>
     <!-- Header-Bereich mit der Navigation -->
     <header>
         <nav class="navbar">
@@ -26,7 +31,7 @@
             <ul>
                 <li><a href="../index.html"> Main </a></li>
                 <li><a href="../info.html"> Info </a></li>
-                <li><a href="../highlights.html"> Highlights </a></li>
+                <li><a href="../highligts.html"> Highlights </a></li>
                 <li><a href="../player.html"> Player </a></li>
                 <li><a href="../support.html"> Support </a></li>
             </ul>
