--- a/highligts.html
+++ b/highligts.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/highligts-style.css">
 </head>
 <body>
+    <div class="loader"></div>
+    <script src="js/loader.js"></script>
     <!-- Header-Bereich mit der Navigation -->
     <header>
         <nav class="navbar">
