--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="css/index-style.css">
 </head>
 <body>
+    <!-- Loader-Element -->
+    <div class="loader"></div>
+
+    <!-- Einbindung des JavaScript-Skripts zum Steuern des Loaders -->
+    <script src="js/loader.js"></script>
+
     <!-- Header-Bereich mit der Navigation -->
     <header>
         <nav class="navbar">
