--- a/player.html
+++ b/player.html
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="css/player-style.css">
 </head>
 <body>
+    <!-- Loader-Element -->
+    <div class="loader"></div>
+
+    <!-- Einbindung des JavaScript-Skripts zum Steuern des Loaders -->
+    <script src="js/loader.js"></script>
+    
     <!-- Header-Bereich mit Navigation -->
     <header>
         <nav class="navbar">
